Task 2 is Done =D

--- a/Task_2.ipynb
+++ b/Task_2.ipynb
@@ -2,35 +2,47 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Task 2\n",
     "### In this task you will work with data collected from our wheeled robot , check How_data_collected_for_Task_2.ipynb for more info.\n",
     "### You have 7 txt files (0.txt to 6.txt) each represent a step\n",
     "### build a map of the robot at each step independently using the code provided in Task 1 ( taken from http://ais.informatik.uni-freiburg.de/teaching/ss20/robotics/)"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
+    "import cv2\n",
+    "import csv\n",
     "pi = math.pi\n",
     "#arr[]=np.array()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 84,
-   "metadata": {},
+   "source": [
+    "for i in range(7):### loop opens each file and prints number of measurments\n",
+    "    \n",
+    "    with open(str(i)+'.txt') as f:\n",
+    "        line_1 = f.readline()\n",
+    "        line_as_list=line_1.split('\\t')\n",
+    "        arr = np.array(line_as_list)\n",
+    "        print(len(arr))\n",
+    "    f.close()\n",
+    "##### print  "
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "100\n",
       "73\n",
@@ -42,32 +54,11 @@
      ]
     }
    ],
-   "source": [
-    "for i in range(7):### loop opens each file and prints number of measurments\n",
-    "    \n",
-    "    with open(str(i)+'.txt') as f:\n",
-    "        line_1 = f.readline()\n",
-    "        line_as_list=line_1.split('\\t')\n",
-    "        arr = np.array(line_as_list)\n",
-    "        print(len(arr))\n",
-    "    f.close()\n",
-    "##### print  "
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "56\n",
-      "(15, 280.296875, 1203.0)\n"
-     ]
-    }
-   ],
    "source": [
     "\n",
     "## oppen one file and review data in array arr\n",
@@ -78,11 +69,21 @@
     "    print(len(arr))\n",
     "    print(arr[0])# \n",
     "f.close()\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "56\n",
+      "(15, 280.296875, 1203.0)\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "###  What does (15, 280.296875, 1203.0) mean (check https://rplidar.readthedocs.io/en/latest/ for more info)\n",
     "#### First value (mostly 15 ) is  quality : int which is  Reflected laser pulse strength\n",
@@ -90,73 +91,99 @@
     "#### Second value is  angle : float which is the measurment heading angle in degree unit [0, 360)\n",
     "\n",
     "#### Third value is  distance : float Measured object distance related to the sensor’s rotation center. In millimeter unit. Set to 0 when measurment is invalid."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
    "source": [
     "## Here comes your code \n",
-    "## generate occupancy gird map from each step"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+    "## generate occupancy gird map from each step\n",
+    "\n",
+    "for i in range(7):\n",
+    "    with open(str(i)+'.txt') as f:\n",
+    "        line_1 = f.readline()\n",
+    "        readings = []\n",
+    "        img = np.zeros((3000,3000),dtype=np.uint8)\n",
+    "        img.fill(128)\n",
+    "        line_as_list=line_1.split('\\t')\n",
+    "        arr = np.array(line_as_list)\n",
+    "        for element in arr:\n",
+    "            element = element.replace('(','')\n",
+    "            element = element.replace(')','')\n",
+    "            element = element.split(',')\n",
+    "            readings.append([float(element[1]), float(element[2])])\n",
+    "        for reading in readings:\n",
+    "            x1=1500.0\n",
+    "            y1= 1500.0\n",
+    "            angle = math.radians(reading[0])\n",
+    "            x2 = int (x1 + math.cos(angle)*reading[1])\n",
+    "            y2 = int (y1 + math.sin(-1*angle)*reading[1])\n",
+    "            x1 = int(x1)\n",
+    "            y1= int(y1)\n",
+    "            cv2.line(img,(x1,y1),(x2,y2),(255,255,255),thickness=4)\n",
+    "            cv2.circle(img,(x2,y2),4,(0,0,0),thickness=-1)\n",
+    "            cv2.imwrite(str(i)+'.png', img)\n",
+    "f.close()\n"
+   ],
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.10 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -168,7 +195,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
+  },
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
   }
  },
  "nbformat": 4,
